--- a/spam_rf_clean.ipynb
+++ b/spam_rf_clean.ipynb
@@ -34,9 +34,10 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "RANDOM_STATE = 42\n"
+    "RANDOM_STATE = 42"
    ]
   },
   {
@@ -125,7 +126,7 @@
    "source": [
     "df = pd.read_csv('spam.csv', encoding='ISO-8859-1', usecols=[0, 1], names=['label', 'text'], skiprows=1)\n",
     "df['label'] = df['label'].map({'ham': 0, 'spam': 1})\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -158,7 +159,7 @@
     "plt.xticks([0, 1], ['Ham', 'Spam'], rotation=0)\n",
     "plt.ylabel('Proportion')\n",
     "plt.savefig(\"class_balance.png\", dpi=150, bbox_inches=\"tight\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -186,7 +187,7 @@
    "source": [
     "def clean_text(text):\n",
     "    return ''.join([ch for ch in text if ch not in string.punctuation]).lower()\n",
-    "print(clean_text(\"Hello, World!\"))\n"
+    "print(clean_text(\"Hello, World!\"))"
    ]
   },
   {
@@ -209,7 +210,7 @@
     "    test_size=0.2,\n",
     "    stratify=df['label'],\n",
     "    random_state=RANDOM_STATE\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -234,7 +235,7 @@
     "    min_df=2\n",
     ")\n",
     "X_train_vec = tfidf.fit_transform(X_train)\n",
-    "X_test_vec = tfidf.transform(X_test)\n"
+    "X_test_vec = tfidf.transform(X_test)"
    ]
   },
   {
@@ -273,7 +274,7 @@
     "rf.fit(X_train_vec.toarray(), y_train)\n",
     "y_pred = rf.predict(X_test_vec.toarray())\n",
     "print('Accuracy:', accuracy_score(y_test, y_pred))\n",
-    "print(classification_report(y_test, y_pred))\n"
+    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -394,7 +395,7 @@
     "features = tfidf.get_feature_names_out()\n",
     "feat_df = pd.DataFrame({'term': features, 'importance': importances})\n",
     "feat_df = feat_df[feat_df['importance'] > 0.001].sort_values('importance', ascending=False)\n",
-    "feat_df.head(10)\n"
+    "feat_df.head(10)"
    ]
   },
   {
@@ -419,7 +420,7 @@
     "    vocabulary=selected_terms\n",
     ")\n",
     "X_train_sel = tfidf_sel.fit_transform(X_train)\n",
-    "X_test_sel = tfidf_sel.transform(X_test)\n"
+    "X_test_sel = tfidf_sel.transform(X_test)"
    ]
   },
   {
@@ -457,7 +458,7 @@
     "    n_jobs=-1\n",
     ")\n",
     "grid.fit(X_train_sel.toarray(), y_train)\n",
-    "print('Best Params:', grid.best_params_)\n"
+    "print('Best Params:', grid.best_params_)"
    ]
   },
   {
@@ -512,12 +513,56 @@
     "plt.title('Confusion Matrix')\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f6bf6d81",
+   "metadata": {},
+   "source": [
+    "## Classification Metrics Summary\n",
+    "\n",
+    "Now we compute key classification metrics discussed in the classification module:\n",
+    "- **Accuracy**\n",
+    "- **Precision**\n",
+    "- **Recall**\n",
+    "- **F1-score**\n",
+    "- **Confusion matrix**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fa0db7a6-b9a4-49f7-984a-402c8c8b1354",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.9776\n",
+      "Precision: 0.9559\n",
+      "Recall:    0.8725\n",
+      "F1-score:  0.9123\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc = accuracy_score(y_test, y_final)\n",
+    "prec = precision_score(y_test, y_final)\n",
+    "rec = recall_score(y_test, y_final)\n",
+    "f1 = f1_score(y_test, y_final)\n",
+    "\n",
+    "print(f\"Accuracy:  {acc:.4f}\")\n",
+    "print(f\"Precision: {prec:.4f}\")\n",
+    "print(f\"Recall:    {rec:.4f}\")\n",
+    "print(f\"F1-score:  {f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d342b66-1f42-48d6-b112-dccb6a4edba2",
    "metadata": {},
    "source": [
     "## Conclusions\n",
